<resources>
    <string name="app_name">Places Search</string>

    <string name="label_keyword">Keyword</string>
    <string name="label_category">Category</string>
    <string name="label_distance">Distance(in miles)</string>
    <string name="label_from">From</string>
    <string name="label_mode">Travel mode</string>

    <string name="label_addr">Address</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_price">Price Level</string>
    <string name="label_rating">Rating</string>
    <string name="label_page">Google Page</string>
    <string name="label_website">Website</string>
    <string name="label_hour">Hours</string>

    <string name="prompt_keyword">Enter Keyword</string>
    <string name="prompt_distance">Enter Distance(default 10 miles)</string>
    <string name="prompt_location">Type in the Location</string>

    <string name="btn_search">Search</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_pre">PREVIOUS</string>
    <string name="btn_next">NEXT</string>

    <string name="fav_format">%1$s was added to favorites</string>
    <string name="unfav_format">%1$s was removed from favorites</string>

    <string name="info_no_results">No results</string>
    <string name="info_no_reviews">No reviews</string>
    <string name="info_no_fav">No favorites</string>
    <string name="info_no_routes">No routes</string>
    <string name="info_no_photo">No photos</string>


    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">Please enter mandatory field</string>
    <string name="error_fill_field">Please fix all fields with errors</string>
    <string name="error_network">Network Error, please try later</string>
    <string name="error_req">INVALID_REQUEST</string>

    <string name="action_settings">Settings</string>
    <string name="action_fav">Favorite</string>
    <string name="action_share">Share</string>

    <string name="action_search">Fetching results</string>
    <string name="action_page">Fetching next page</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_text_search">SEARCH</string>
    <string name="tab_text_fav">FAVORITES</string>
    <string name="tab_text_info">INFO</string>
    <string name="tab_text_photo">PHOTOS</string>
    <string name="tab_text_map">MAP</string>
    <string name="tab_text_review">REVIEWS</string>

    <string name="title_activity_main">Places Search</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_m_list">Search results</string>

    <string name="fav_file_key">fav_data</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>


</resources>
