<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context=".SearchFragment">

    <LinearLayout
        android:id="@+id/places_search_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/keyword_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_keyword" />


        <TextView
            android:id="@+id/err_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_field_required"
            android:textColor="?attr/colorError" />

        <EditText
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_keyword"
            android:inputType="text" />


        <TextView
            android:id="@+id/category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_category" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_distance" />


        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_distance"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:id="@+id/from_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_from" />

        <RadioGroup
            android:id="@+id/from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Current Location" />


            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Other. Specify Location" />

            <TextView
                android:id="@+id/err_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_field_required"
                android:textColor="?attr/colorError" />

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="30dp">

                    <AutoCompleteTextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/prompt_location"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>
            </ScrollView>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/btn_search"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clear_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/btn_clear"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>